[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
# rayon = "1.2.1"
arrayvec = "0.5.1"
itertools = "0.8.2"
yansi = "0.5.0"
num-rational = "0.2.2"
num = "0.2.0"
nalgebra = "0.19.0"
# staticvec = "0.5.0"
